Added Serilog config

--- a/src/TicketType.Microservice.Template/appsettings.Production.json
+++ b/src/TicketType.Microservice.Template/appsettings.Production.json
@@ -4,9 +4,9 @@
       "Serilog.Sinks.Console"
     ],
     "MinimumLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Override": {
-        "Variant": "Debug"
+        "Variant": "Information"
       }
     },
     "WriteTo": [
@@ -14,7 +14,7 @@
         "Name": "Console",
         "Args": {
           "formatter": "Serilog.Formatting.Json.JsonFormatter",
-          "restrictedToMinimumLevel": "Debug"
+          "restrictedToMinimumLevel": "Information"
         }
       }
     ],
