Added SQS handler & Json extension, models, new test,updated readme. Added LaunchDarkly setup.

--- a/src/TicketType.Microservice.Template/appsettings.Development.json
+++ b/src/TicketType.Microservice.Template/appsettings.Development.json
@@ -25,5 +25,17 @@
     "Properties": {
       "Application": "TicketType.Microservice.Template"
     }
+  },
+  "AWS": {
+    "Region": "us-east-1",
+    "ServiceURL": "http://localhost:4566",
+    "UseHttp": true
+  },
+  "SQS": {
+    "QueueUrl": "http://localhost:4566/000000000000/entity-api"
+  },
+  "LaunchDarkly": {
+    "Key": "",
+    "UserName": "FRESHDESK_HANDLER_DEV"
   }
 }
