--- a/src/TicketType.Microservice.Template/TicketType.Microservice.Template.csproj
+++ b/src/TicketType.Microservice.Template/TicketType.Microservice.Template.csproj
@@ -11,7 +11,6 @@
         <PackageReference Include="Epsagon.Dotnet.Mvc" Version="1.24.2" />
         <PackageReference Include="LaunchDarkly.Logging.Microsoft" Version="2.0.0" />
         <PackageReference Include="LaunchDarkly.ServerSdk" Version="6.3.2" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="Serilog" Version="2.10.0" />
@@ -23,7 +22,10 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
         <PackageReference Include="TimeZoneConverter" Version="5.0.0" />
         <PackageReference Include="Variant.HealthChecks.Console" Version="5.0.0" />
-        <PackageReference Include="Variant.MessageHandler" Version="5.1.0" />
+        <PackageReference Include="Variant.MessageHandler.Epsagon" Version="5.0.1" />
+        <PackageReference Include="Variant.MessageHandler.HealthChecks" Version="5.1.0" />
+        <PackageReference Include="Variant.MessageHandler.SQS" Version="5.1.0" />
+        <PackageReference Include="Variant.MessageHandler.Tracing" Version="5.1.0" />
         <PackageReference Include="Variant.TicketsShared.DataSource" Version="1.0.1" />
         <PackageReference Include="Variant.TicketsShared.ErrorHandler" Version="1.0.1" />
         <PackageReference Include="Variant.TicketsShared.Messaging" Version="1.0.1" />
