--- a/tests/TicketType.Microservice.Template.UnitTests/TicketType.Microservice.Template.UnitTests.csproj
+++ b/tests/TicketType.Microservice.Template.UnitTests/TicketType.Microservice.Template.UnitTests.csproj
@@ -11,7 +11,6 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
         <PackageReference Include="Moq" Version="4.16.1" />
@@ -25,6 +24,10 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\TicketType.Microservice.Template\TicketType.Microservice.Template.csproj" />
     </ItemGroup>
 
 </Project>
