Added localstack, Docker & docker-compose set up.

--- a/src/TicketType.Microservice.Template/appsettings.Development.json
+++ b/src/TicketType.Microservice.Template/appsettings.Development.json
@@ -32,7 +32,10 @@
     "UseHttp": true
   },
   "SQS": {
-    "QueueUrl": "http://localhost:4566/000000000000/entity-api"
+    "QueueUrl": "http://localhost:4566/000000000000/entity-queue"
+  },
+  "SNS": {
+    "TopicUrl": "http://localhost:4566/000000000000/entity-topic"
   },
   "LaunchDarkly": {
     "Key": "",
