Corrected typo in GitHub workflows.

--- a/.github/workflows/octo_push.yaml
+++ b/.github/workflows/octo_push.yaml
@@ -4,7 +4,7 @@ on:
   push:
 
 env:
-  OCTOPUS_PROJECT_NAME: ${{ env.GITHUB_REPOSITORY }}
+  OCTOPUS_PROJECT_NAME: ${{ GITHUB_REPOSITORY }}
   OCTOPUS_SPACE_NAME: Engineering
   MASTER_BRANCH: master
   FEATURE_BRANCH_REGEX: "[a-zA-Z]+-[0-9]+"
