--- a/.github/workflows/octo_push.yaml
+++ b/.github/workflows/octo_push.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Get Octopus Projact Name
         id: octopus-project-name
         shell: bash
-        run: echo "::set-output name=name::$(echo ${{ GITHUB_REPOSITORY }} | perl -ne 'if (/^[a-z-]+\/([a-z\-]+)$/) { print $1 }' | head -1)"
+        run: echo "::set-output name=name::$(echo ${GITHUB_REPOSITORY} | perl -ne 'if (/^[a-z-]+\/([a-z\-]+)$/) { print $1 }' | head -1)"
 
       - name: Checkout Code
         uses: actions/checkout@v2
