--- a/.gitignore
+++ b/.gitignore
@@ -205,6 +205,7 @@ project.lock.json
 .localstack/
 # Local .terraform directories
 **/.terraform/*
+**/.terraform.lock.hcl
 
 # .tfstate files
 *.tfstate
