--- a/src/TicketType.Microservice.Template/appsettings.Development.json
+++ b/src/TicketType.Microservice.Template/appsettings.Development.json
@@ -35,10 +35,11 @@
     "QueueUrl": "http://localhost:4566/000000000000/entity-queue"
   },
   "SNS": {
-    "TopicUrl": "http://localhost:4566/000000000000/entity-topic"
+    "EntityTopicUrl": "http://localhost:4566/000000000000/entity-topic",
+    "TicketTopicUrl": "http://localhost:4566/000000000000/tickets-topic"
   },
   "LaunchDarkly": {
     "Key": "",
-    "UserName": "FRESHDESK_HANDLER_DEV"
+    "UserName": "ticket-type-prototype-dev"
   }
 }
