--- a/src/TicketType.Microservice.Template/TicketType.Microservice.Template.csproj
+++ b/src/TicketType.Microservice.Template/TicketType.Microservice.Template.csproj
@@ -30,7 +30,11 @@
         <PackageReference Include="Variant.MessageHandler.Tracing" Version="5.1.0" />
         <PackageReference Include="Variant.TicketsShared.DataSource" Version="1.0.1" />
         <PackageReference Include="Variant.TicketsShared.ErrorHandler" Version="1.0.1" />
-        <PackageReference Include="Variant.TicketsShared.Messaging" Version="1.0.1" />
+        <PackageReference Include="Variant.TicketsShared.Messaging" Version="1.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Models" />
     </ItemGroup>
 
 </Project>
