Updated appsetting dev, added log line. Added new Octo var. Updated Shared libraries.

--- a/src/TicketType.Microservice.Template/appsettings.Development.json
+++ b/src/TicketType.Microservice.Template/appsettings.Development.json
@@ -41,5 +41,10 @@
   "LaunchDarkly": {
     "Key": "",
     "UserName": "ticket-type-prototype-dev"
+  },
+  "Publisher": {
+    "Topics": {
+      "ticketing": "arn:aws:sns:us-east-1:000000000000:tickets-topic"
+    }
   }
 }
