--- a/src/TicketType.Microservice.Template/appsettings.Development.json
+++ b/src/TicketType.Microservice.Template/appsettings.Development.json
@@ -39,7 +39,7 @@
     "TicketTopicUrl": "http://localhost:4566/000000000000/tickets-topic"
   },
   "LaunchDarkly": {
-    "Key": "",
+    "Key": "123",
     "UserName": "ticket-type-prototype-dev"
   },
   "Publisher": {
