--- a/tests/TicketType.Microservice.Template.UnitTests/TicketType.Microservice.Template.UnitTests.csproj
+++ b/tests/TicketType.Microservice.Template.UnitTests/TicketType.Microservice.Template.UnitTests.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
         <PackageReference Include="Moq" Version="4.16.1" />
         <PackageReference Include="Serilog.Exceptions" Version="8.0.0" />
+        <PackageReference Include="Variant.TicketsShared.LaunchDarklyExtensions" Version="1.0.2" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
