Updated shared Messaging version. Downgraded Serilog for compatibility.

--- a/src/TicketType.Microservice.Template/appsettings.Development.json
+++ b/src/TicketType.Microservice.Template/appsettings.Development.json
@@ -13,7 +13,7 @@
       {
         "Name": "Console",
         "Args": {
-          "formatter": "Serilog.Formatting.Json.JsonFormatter",
+          "outputTemplate": "[{Timestamp:HH:mm:ss}] {Message:lj}{NewLine}{Exception}",
           "restrictedToMinimumLevel": "Debug"
         }
       }
@@ -32,7 +32,9 @@
     "UseHttp": true
   },
   "SQS": {
-    "QueueUrl": "http://localhost:4566/000000000000/entity-queue"
+    "Region": "us-east-1",
+    "QueueUrl": "http://localhost:4566/000000000000/entity-queue",
+    "UseHttp": true
   },
   "SNS": {
     "EntityTopicUrl": "http://localhost:4566/000000000000/entity-topic",
