--- a/src/TicketType.Microservice.Template/appsettings.Development.json
+++ b/src/TicketType.Microservice.Template/appsettings.Development.json
@@ -46,5 +46,12 @@
     "Topics": {
       "ticketing": "arn:aws:sns:us-east-1:000000000000:tickets-topic"
     }
+  },
+  "EntityApi": {
+    "BaseAddress": "https://api.internal.dev-drivevariant.com/entity-import",
+    "UserAgent": "exception-microservice-template"
+  },
+  "TractorApi": {
+    "ResourcePath": "/tractor-api"
   }
 }
