--- a/src/TicketType.Microservice.Template/appsettings.Development.json
+++ b/src/TicketType.Microservice.Template/appsettings.Development.json
@@ -36,17 +36,14 @@
     "QueueUrl": "http://localhost:4566/000000000000/entity-queue",
     "UseHttp": true
   },
-  "SNS": {
-    "EntityTopicUrl": "http://localhost:4566/000000000000/entity-topic",
-    "TicketTopicUrl": "http://localhost:4566/000000000000/tickets-topic"
-  },
   "LaunchDarkly": {
     "Key": "",
     "UserName": "ticket-type-prototype-dev"
   },
-  "Publisher": {
-    "Topics": {
-      "ticketing": "arn:aws:sns:us-east-1:000000000000:tickets-topic"
+  "OutgoingSNSTopicName": "tickets-topic",
+  "MessagePublisher": {
+    "SnsTopics": {
+      "Outgoing": "arn:aws:sns:us-east-1:000000000000:tickets-topic"
     }
   }
 }
