data sources configuration

--- a/src/TicketType.Microservice.Template/appsettings.Development.json
+++ b/src/TicketType.Microservice.Template/appsettings.Development.json
@@ -55,5 +55,14 @@
   },
   "TractorApi": {
     "ResourcePath": "/tractor-api"
+  },
+  "DriverApi": {
+    "ResourcePath": "/driver-api"
+  },
+  "HometimeApi": {
+    "ResourcePath": "/hometime-api"
+  },
+  "OrderApi": {
+    "ResourcePath": "/order-api"
   }
 }
