Added appsettings to csproj

--- a/src/TicketType.Microservice.Template/TicketType.Microservice.Template.csproj
+++ b/src/TicketType.Microservice.Template/TicketType.Microservice.Template.csproj
@@ -33,4 +33,10 @@
         <PackageReference Include="Variant.TicketsShared.Messaging" Version="1.0.11" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="appsettings.*.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
 </Project>
