Turned on health checks.

--- a/helm/TicketType.Microservice.Template/values.yaml
+++ b/helm/TicketType.Microservice.Template/values.yaml
@@ -55,7 +55,7 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
 
 health:
-  enabled: false
+  enabled: true
   targetPort: 1337
   portName: health
   path: /health
