--- a/src/TicketType.Microservice.Template/TicketType.Microservice.Template.csproj
+++ b/src/TicketType.Microservice.Template/TicketType.Microservice.Template.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
+        <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+        <RootNamespace>TicketType.Microservice.Template</RootNamespace>
         <TargetFramework>net5.0</TargetFramework>
         <RunWorkingDirectory>$(MSBuildThisFileDirectory)</RunWorkingDirectory>
         <RepositoryUrl>https://github.com/variant-inc/ticket-type-microservice-template</RepositoryUrl>
@@ -19,8 +21,7 @@
         <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.2.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-        <PackageReference Include="TimeZoneConverter" Version="5.0.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
         <PackageReference Include="Variant.HealthChecks.Console" Version="5.0.0" />
         <PackageReference Include="Variant.MessageHandler.Epsagon" Version="5.0.1" />
         <PackageReference Include="Variant.MessageHandler.HealthChecks" Version="5.1.0" />
@@ -28,7 +29,7 @@
         <PackageReference Include="Variant.MessageHandler.Tracing" Version="5.1.0" />
         <PackageReference Include="Variant.TicketsShared.DataSource" Version="1.0.1" />
         <PackageReference Include="Variant.TicketsShared.ErrorHandler" Version="1.0.1" />
-        <PackageReference Include="Variant.TicketsShared.Messaging" Version="1.0.9" />
+        <PackageReference Include="Variant.TicketsShared.Messaging" Version="1.0.14" />
         <PackageReference Include="Variant.TicketsShared.LaunchDarklyExtensions" Version="1.0.2" />		
     </ItemGroup>
 
