Updates for topic name.

--- a/src/TicketType.Microservice.Template/appsettings.Development.json
+++ b/src/TicketType.Microservice.Template/appsettings.Development.json
@@ -37,7 +37,7 @@
     "UseHttp": true
   },
   "LaunchDarkly": {
-    "Key": "123",
+    "Key": "sdk-99dc2a50-425e-4351-84dd-5dfa68d0b507",
     "UserName": "ticket-type-prototype-dev"
   },
   "OutgoingSNSTopicName": "tickets-topic",
