Updated messaging to 1.0.24. Updates for message publishing.

--- a/src/TicketType.Microservice.Template/appsettings.Development.json
+++ b/src/TicketType.Microservice.Template/appsettings.Development.json
@@ -31,6 +31,11 @@
     "ServiceURL": "http://localhost:4566",
     "UseHttp": true
   },
+  "SNS": {
+    "Region": "us-east-1",
+    "ServiceURL": "http://localhost:4566",
+    "UseHttp": true
+  },
   "SQS": {
     "Region": "us-east-1",
     "QueueUrl": "http://localhost:4566/000000000000/entity-queue",
@@ -40,7 +45,6 @@
     "Key": "sdk-99dc2a50-425e-4351-84dd-5dfa68d0b507",
     "UserName": "ticket-type-prototype-dev"
   },
-  "OutgoingSNSTopicName": "tickets-topic",
   "MessagePublisher": {
     "SnsTopics": {
       "Outgoing": "arn:aws:sns:us-east-1:000000000000:tickets-topic"
