--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,11 @@ services:
       - AWS_ACCESS_KEY_ID=12345
       - AWS_SECRET_ACCESS_KEY=12345
       - AWS__ServiceURL=http://localstack:4576
+      - SNS__ServiceURL=http://localstack:4576
+      - SNS__Region=us-east-1
       - SQS__Region=us-east-1
       - SQS__QueueUrl=http://localstack:4576/000000000000/entity-queue
-      - OutgoingSNSTopicName=tickets-topic
+      - MessagePublisher__SnsTopics__Outgoing=arn:aws:sns:us-east-1:000000000000:tickets-topic
       - DOTNET_ENIVRONMENT=Development
       - DOTNET_USE_POLLING_FILE_WATCHER=1
       - DOTNET_RUNNING_IN_CONTAINER=true
