--- a/helm/TicketType.Microservice.Template/templates/deployment.yaml
+++ b/helm/TicketType.Microservice.Template/templates/deployment.yaml
@@ -67,8 +67,8 @@ spec:
               value: {{ required "The AWS region is required" .awsRegion | quote }}
             - name: SQS__QueueUrl
               value: {{ required "The incoming SQS queue URL is Required" .SQS.QueueUrl | quote }}
-            - name: OutgoingSNSTopicName
-              value: {{ required "The outgoing SNS topic name is Required" .SNS.OutgoingTopicName | quote }}
+            - name: SNS_REGION
+                value: { { required "The incoming SQS queue URL is Required" .awsRegion | quote } }
             - name: MessagePublisher__SnsTopics__Outgoing
               value: {{ required "The outgoing Ticketing SNS Topic Arn is Required" .SNS.OutgoingTopicArn | quote }}
             - name: LaunchDarkly__Key
