--- a/src/TicketType.Microservice.Template/appsettings.Development.json
+++ b/src/TicketType.Microservice.Template/appsettings.Development.json
@@ -65,5 +65,8 @@
   },
   "OrderApi": {
     "ResourcePath": "/order-api"
+  },
+  "SimulationsApi": {
+    "BaseAddress": "https://api.internal.dev-drivevariant.com/simulation-assignments/simulation-assignments-api/graphql"
   }
 }
