--- a/src/TicketType.Microservice.Template/appsettings.Production.json
+++ b/src/TicketType.Microservice.Template/appsettings.Production.json
@@ -25,5 +25,8 @@
     "Properties": {
       "Application": "TicketType.Microservice.Template"
     }
+  },
+  "SimulationsApi": {
+    "BaseAddress": "https://api.internal.dev-drivevariant.com/simulation-assignments/simulation-assignments-api/graphql"
   }
 }
