Added project setup script. Updated README & validation script. Removed unused Octopus vars.

--- a/.github/workflows/octo_push.yaml
+++ b/.github/workflows/octo_push.yaml
@@ -44,6 +44,7 @@ jobs:
           nuget_pull_token: ${{ secrets.PKG_READ }}
           container_push_enabled: 'true'
           # This should match the ECR_REPO_URL path part set in Octopus
+          # CHANGE_THIS
           ecr_repository: exception-recognition-engine/protoypev1
           sonar_scan_in_docker: 'false'
 
