--- a/helm/TicketType.Microservice.Template/Chart.yaml
+++ b/helm/TicketType.Microservice.Template/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v2
+# CHANGE_THIS - should be unique in our cluster.
 name: ticket-type-microservice-template
 description: A Helm chart for Kubernetes
 
@@ -16,9 +17,3 @@ type: application
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 0.1.0
-
-#dependencies:
-#  - name: variant-service-deployments
-#    version: "0.1.6"
-#    alias: vsd
-#    repository: "https://raw.githubusercontent.com/variant-inc/lazy-helm-charts/gh-pages"
